Каталог попутчиков Tablet

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1040,7 +1040,7 @@
                     <p class="route__country">Сейшелы</p>
                   </li>
                 </ul>
-                <p class="user-card__text">транспорт:</p>
+                <p class="user-card__text user-card__text--transport">транспорт:</p>
                 <ul class="user-card__transport transport transport--catalog">
                   <li class="transport__item transport__item--active">
                       <svg class="transport__icon transport__icon--airplane" role="img" width="12" height="14">
@@ -1066,6 +1066,7 @@
                 <p class="user-card__text user-card__text--level">левел:</p>
                 <div class="user-card__user-level user-level user-level--catalog">
                   <span class="user-level__number">99</span>
+                  <span class="user-level__level">level</span>
                 </div>
                 <a class="user-card__button button button--catalog" href="#">Позвать!</a>
               </li>
@@ -1101,7 +1102,7 @@
                     <p class="route__country">Чехия</p>
                   </li>
                 </ul>
-                <p class="user-card__text">транспорт:</p>
+                <p class="user-card__text user-card__text--transport">транспорт:</p>
                 <ul class="user-card__transport transport transport--catalog">
                   <li class="transport__item transport__item--active">
                     <svg class="transport__icon transport__icon--airplane" role="img" width="12" height="14">
@@ -1127,6 +1128,7 @@
                 <p class="user-card__text user-card__text--level">левел:</p>
                 <div class="user-card__user-level user-level user-level--catalog">
                   <span class="user-level__number">80</span>
+                  <span class="user-level__level">level</span>
                 </div>
                 <a class="user-card__button button button--catalog" href="#">Позвать!</a>
               </li>
@@ -1150,7 +1152,7 @@
                   <li class="tags__item">#рэп</li>
                   <li class="tags__item">#тату</li>
                   <li class="tags__item">#хайпбист</li>
-                  <li class="tags__item">#кросовки</li>
+                  <li class="tags__item">#кроссовки</li>
                   <li class="tags__item">#суприм</li>
                 </ul>
                 <p class="user-card__text">хочет посетить:</p>
@@ -1165,7 +1167,7 @@
                     <p class="route__country">Доминикана</p>
                   </li>
                 </ul>
-                <p class="user-card__text">транспорт:</p>
+                <p class="user-card__text user-card__text--transport">транспорт:</p>
                 <ul class="user-card__transport transport transport--catalog">
                   <li class="transport__item transport__item--active">
                     <svg class="transport__icon transport__icon--airplane" role="img" width="12" height="14">
@@ -1191,13 +1193,14 @@
                 <p class="user-card__text user-card__text--level">левел:</p>
                 <div class="user-card__user-level user-level user-level--catalog">
                   <span class="user-level__number">25</span>
+                  <span class="user-level__level">level</span>
                 </div>
                 <a class="user-card__button button button--catalog" href="#">Позвать!</a>
               </li>
 
               <li class="user-card__item">
                 <h3 class="user-card__title">
-                  <a class="user-card__profile-link user-card__profile-link--ready" href="user-Rogovaya-Larisa.html">Лариса Роговая</a>
+                  <a class="user-card__profile-link user-card__profile-link--ready user-card__profile-link--long" href="user-Rogovaya-Larisa.html">Лариса Роговая</a>
                 </h3>
                 <div class="user-card__wrapper">
                   <picture>
@@ -1225,7 +1228,7 @@
                     <p class="route__country">Германия</p>
                     </li>
                 </ul>
-                <p class="user-card__text">транспорт:</p>
+                <p class="user-card__text user-card__text--transport">транспорт:</p>
                 <ul class="user-card__transport transport transport--catalog">
                   <li class="transport__item transport__item--active">
                       <svg class="transport__icon transport__icon--airplane" role="img" width="12" height="14">
@@ -1251,10 +1254,12 @@
                 <p class="user-card__text user-card__text--level">левел:</p>
                 <div class="user-card__user-level user-level user-level--catalog">
                   <span class="user-level__number">50</span>
+                  <span class="user-level__level">level</span>
                 </div>
                 <a class="user-card__button button button--catalog" href="#">Позвать!</a>
               </li>
             </ul>
+            <div class="companions-filtered__more">Показать еще</div>
 
           </section>
         </div>
