Каталог попутчиков Desktop

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1164,7 +1164,7 @@
                     <p class="route__country">Австралия</p>
                     </li>
                   <li class="route__item route__item--dominican">
-                    <p class="route__country">Доминикана</p>
+                    <p class="route__country">Доминика</p>
                   </li>
                 </ul>
                 <p class="user-card__text user-card__text--transport">транспорт:</p>
