Каталог попутчиков показать еще

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1258,8 +1258,32 @@
                 </div>
                 <a class="user-card__button button button--catalog" href="#">Позвать!</a>
               </li>
+              
             </ul>
-            <div class="companions-filtered__more">Показать еще</div>
+            <a class="companions-filtered__more" href="more-catalog.html">Показать еще</a>
+
+            <div class="companions-filtered__control-arrow control-arrow">
+              <ul class="control-arrow__pagination pagination">
+                <li class="pagination__item pagination__item--active">
+                  <a class="pagination__link" href="#">1</a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">2</a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">3</a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">4</a>
+                </li>
+              </ul>
+              <a class="control-arrow__arrow control-arrow__arrow--left" href="#">
+                <span class="visually-hidden">предыдущая</span>
+              </a>
+              <a class="control-arrow__arrow control-arrow__arrow--right" href="#">
+                <span class="visually-hidden">следующая</span>
+              </a>
+            </div>
 
           </section>
         </div>
