--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1294,7 +1294,7 @@
 
     <footer class="page-footer">
       <div class="container">
-        <a class="page-footer__logo logo">
+        <a class="page-footer__logo logo" href="index.html">
           <picture>
             <source type="image/webp" media="(min-width: 1440px)"
               srcset="img/logo-desktop-blue@1x.webp 1x, img/logo-desktop-blue@2x.webp 2x">
