--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,7 +44,7 @@
               <a href="index.html">О сервисе</a>
             </li>
             <li class="site-nav__item">
-              <a href="form.html">Направления</a>
+              <a href="#">Направления</a>
             </li>
             <li class="site-nav__item">
               <a>Попутчики</a>
