--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
               <a>О сервисе</a>
             </li>
             <li class="site-nav__item">
-              <a href="form.html">Направления</a>
+              <a href="#">Направления</a>
             </li>
             <li class="site-nav__item">
               <a href="catalog.html">Попутчики</a>
